<resources>
    <string name="app_name" translatable="false">Birday</string>
    <string name="app_welcome">Welcome to Birday</string>
    <string name="app_name_extended">Birday - Event Manager</string>
    <string name="leave_review_title">Review Birday</string>
    <string name="leave_review_subtitle">Leave a review to help me with the app. Keep in mind that, donations aside, this app is completely free and ad-free!</string>
    <string name="yes_review">Review!</string>
    <string name="later">Later, I swear</string>
    <string name="no_thanks">No way!</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="no_events">No events! Start adding one using the button below!</string>
    <string name="no_favorites">No favorites! Press the star to save an event in your favorites!</string>
    <string name="add_favorite">Add to favorites</string>
    <string name="stats">Statistics</string>
    <string name="no_stats">No stats to show!</string>
    <string name="stats_summary">Stats summary</string>
    <string name="no_stats_description">You don\'t have enough events to generate stats. Add some and come back later!</string>
    <plurals name="stats_total">
        <item quantity="one">Birday is helping you to remember a total of %d event</item>
        <item quantity="other">Birday is helping you to remember a total of %d events</item>
    </plurals>
    <string name="next_event">Next event</string>
    <string name="no_next_event">No events to show!</string>
    <string name="no_next_event_description">You haven\'t entered or imported an event yet. Add one and let Birday help you!</string>
    <string name="next_age_years">Years</string>
    <string name="event_others">and others</string>
    <plurals name="days_left">
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>
    <plurals name="days_lived_count">
        <item quantity="one">%s day</item>
        <item quantity="other">%s days</item>
    </plurals>
    <string name="customization">Customization</string>
    <string name="app_behavior">App behavior</string>
    <string name="additional_notification_name">Additional notification</string>
    <string name="additional_notification_description">Send an additional notification days before the event. %s</string>
    <string name="no_additional_notification">No additional notification</string>
    <string name="one_day_before">One day before</string>
    <string name="two_days_before">Two days before</string>
    <string name="three_days_before">Three days before</string>
    <string name="four_days_before">Four days before</string>
    <string name="five_days_before">Five days before</string>
    <string name="six_days_before">Six days before</string>
    <string name="seven_days_before">Seven days before</string>
    <string name="ten_days_before">Ten days before</string>
    <string name="fourteen_days_before">Fourteen days before</string>
    <string name="twentyone_days_before">Twentyone days before</string>
    <string name="vibration_name">Vibration</string>
    <string name="vibration_description_on">Vibrate when a button is pressed</string>
    <string name="vibration_description_off">No vibrations when a button is pressed</string>
    <string name="date_format_name">Date format</string>
    <string name="notification_hour_name">Notification hour</string>
    <string name="notification_hour_description">%s \n\nPlease note that the notification might not work when the app is killed by the system in some Huawei, Xiaomi and OnePlus devices. Refer to dontkillmyapp.com for more information</string>
    <string name="accent_description">Change the default accent color</string>
    <string name="accent_name">Accent color</string>
    <string name="theme_description">Use a dark, light or automatic app theme</string>
    <string name="theme_name">App theme</string>
    <string name="monet" translatable="false">Monet</string>
    <string name="aqua">Aqua</string>
    <string name="brown">Brown</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="teal">Teal</string>
    <string name="violet">Violet</string>
    <string name="pink">Pink</string>
    <string name="light_blue">Light Blue</string>
    <string name="red">Red</string>
    <string name="lime">Lime</string>
    <string name="crimson">Crimson</string>
    <string name="system_theme">System default</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="black_theme" translatable="false">Amoled</string>
    <string name="shimmer_name">Shimmer effect</string>
    <string name="shimmer_description_on">A shiny animation here and there</string>
    <string name="shimmer_description_off">No additional graphic effects</string>
    <string name="import_export">Import and Export</string>
    <string name="import_contacts_title">Import events from contacts</string>
    <string name="import_contacts_description">Make sure to modify the events with missing years to always have accurate statistics!</string>
    <string name="import_success">Import completed successfully!</string>
    <string name="import_nothing_found">No event found!</string>
    <string name="import_failed">Something went wrong!</string>
    <string name="missing_permission_contacts">The contact permission was denied. Try again or activate the permission manually,
    or the contacts import won\'t work!</string>
    <string name="missing_permission_contacts_forever">Birday can\'t ask for permission to import contacts,
    since you checked "never ask again". Enable it manually!</string>
    <string name="birday_import_title">Import a Birday backup</string>
    <string name="birday_import_description">Choose a valid Birday backup to restore your events. All existing data
    will be overwritten!</string>
    <string name="birday_export_title">Export and share events</string>
    <string name="birday_export_description">Export the available events to a backup, and share them if you want</string>
    <string name="birday_import_success">Import completed!</string>
    <string name="birday_import_failure">Import failed. Did you choose the file correctly?</string>
    <string name="birday_import_invalid_file">Import failed. The chosen file is not a Birday backup!</string>
    <string name="birday_import_newer_backup">This backup comes from a newer version of Birday: update the app to import it</string>
    <string name="birday_export_success">Export completed!</string>
    <string name="birday_export_failure">Export failed. Whoopsie!</string>
    <string name="birday_export_nothing_found">Nothing to export!</string>
    <string name="surname_first">Surname first</string>
    <string name="surname_first_description_on">Show the surname before the name</string>
    <string name="surname_first_description_off">Show the name before the surname</string>
    <string name="hide_images">Hide images</string>
    <string name="hide_images_description_on">Event images hidden</string>
    <string name="hide_images_description_off">Event images visible</string>
    <string name="notification_only_favorites">Favorites only</string>
    <string name="notification_only_favorites_description_on">Send a notification for favorite events only</string>
    <string name="notification_only_favorites_description_off">Send a notification for every event inserted</string>
    <string name="additional_notification_only_favorites">Additional notification for favorites</string>
    <string name="additional_notification_only_favorites_description_on">Send the additional notification for favorite events only</string>
    <string name="additional_notification_only_favorites_description_off">Send the additional notification for every event inserted</string>
    <string name="troubleshoot">Troubleshoot and extra</string>
    <string name="battery_optimization_title">Disable battery optimization</string>
    <string name="battery_optimization_description">Open the settings to disable any optimization for Birday. Useful if notifications aren\'t working</string>
    <string name="loop_avd_title">Loop animations</string>
    <string name="loop_avd_description_on">The animations are looped infinitely</string>
    <string name="loop_avd_description_off">The animations will run a single time</string>
    <string name="order_alphabetically_title">Alphabetical order</string>
    <string name="order_alphabetically_description_on">The events are ordered alphabetically</string>
    <string name="order_alphabetically_description_off">The events are ordered by date</string>
    <string name="dev_name" translatable="false">m.i.n.a.r.</string>
    <string name="dev_description">I\'m a polite guy and I like beautiful things, like animations, icons, sport cars and 3D printing. I work as a designer and computer engineer.</string>
    <string name="dev_personal_site" translatable="false">https://minar-portfolio.web.app/</string>
    <string name="dev_instagram" translatable="false">https://www.instagram.com/minar.tastic/</string>
    <string name="dev_github" translatable="false">https://github.com/m-i-n-a-r</string>
    <string name="dev_other_apps" translatable="false">https://play.google.com/store/apps/dev?id=7720251761301594831</string>
    <string name="event_actions">Actions</string>
    <string name="edit_event">Edit event</string>
    <string name="delete_event">Delete event</string>
    <string name="event_apps">Quick apps</string>
    <string name="event_apps_description">Apps to wish all the best rapidly!</string>
    <string name="whatsapp" translatable="false">WhatsApp</string>
    <string name="signal" translatable="false">Signal</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="messenger" translatable="false">Messenger</string>
    <string name="threema" translatable="false">Threema</string>
    <string name="email" translatable="false">Email</string>
    <string name="viber" translatable="false">Viber</string>
    <string name="text_message">Text message</string>
    <string name="dialer">Dialer</string>
    <string name="replace_on_conflict_title">Replace on conflict</string>
    <string name="replace_on_conflict_description_off">When importing, a duplicated event won\'t be replaced by the imported duplicate</string>
    <string name="replace_on_conflict_description_on">When importing, a duplicated event will be overwritten by the imported duplicate</string>
    <string name="contacts_full_name_title">Full names from contacts</string>
    <string name="contacts_full_name_description_on">Titles, middle names and suffixes are kept when reading names from contacts</string>
    <string name="contacts_full_name_description_off">Only first and last name are read from contacts</string>
    <string name="days_milestones_title">Days lived milestones</string>
    <string name="days_milestones_description_on">The details show the days lived, and every 1000 days is celebrated and notified like a birthday</string>
    <string name="days_milestones_description_off">No days lived counter and no milestones</string>
    <string name="unbirthdays_title">Unbirthdays</string>
    <string name="alternative_calendar_title">Alternative calendar</string>
    <string name="unbirthdays_description_on">The details show the next day with the same weekday and day of the month as the birth, like Friday the 13th</string>
    <string name="unbirthdays_description_off">No unbirthdays in the details</string>
</resources>