<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigationMain"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigationFavorites"
        android:icon="@drawable/ic_favorites_24dp"
        android:title="@string/title_favorites"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigationSettings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/actionEmpty1"
        android:title=""
        android:checkable="false"
        android:checked="false"
        app:showAsAction="always"
        android:enabled="false"/>

    <item
        android:id="@+id/actionEmpty2"
        android:title=""
        android:checkable="false"
        android:checked="false"
        app:showAsAction="always"
        android:enabled="false"/>

</menu>
